1st & 2nd bonuses complete

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <form>
         <label for="roast-selection"></label>
         <select id="roast-selection">
-
+            <option>All</option>
             <option>light</option>
             <option>medium</option>
             <option>dark</option>
@@ -33,7 +33,6 @@
     <form>
         <label for="add-roast"></label>
         <select id="add-roast">
-
             <option>light</option>
             <option>medium</option>
             <option>dark</option>
