--- a/index.html
+++ b/index.html
@@ -3,45 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-    <h1>Coffee!</h1>
+<header class="jumbotron">
+    <h1 class="text-center">Coffee!</h1>
 </header>
-<main>
-        <div id="coffees"></div>
-</main>
-<!--User Inputs-->
-<section>
-    <!--Filter Coffees-->
-    <form>
-        <label for="roast-selection"></label>
-        <select id="roast-selection">
-            <option>All</option>
-            <option>light</option>
-            <option>medium</option>
-            <option>dark</option>
-        </select>
-        <input type="text" id="filterCoffees" placeholder="search coffee">
-        <input id="submit" type="submit"/>
-    </form>
-    <hr>
-    <!--Add a Coffee-->
-    <h2>Add a Coffee</h2>
-    <form>
-        <label for="add-roast"></label>
-        <select id="add-roast">
-            <option>light</option>
-            <option>medium</option>
-            <option>dark</option>
-        </select>
-        <input type="text" placeholder="coffee name" id="newCoffee">
-        <input id="enterNewCoffee" type="submit" />
-    </form>
-</section>
+<main class="container row">
 
+
+    <!--User Inputs-->
+    <section class="col-sm-12 col-md-6">
+        <div>
+            <!--Filter Coffees-->
+
+            <form class="w-100">
+                <label for="roast-selection"><h4 class="w-100">Find your favorite</h4></label>
+                <select id="roast-selection" class="w-100">
+                    <option>All</option>
+                    <option>light</option>
+                    <option>medium</option>
+                    <option>dark</option>
+                </select>
+                <input id="submit" type="submit" class="w-100"/>
+                <input type="text" id="filterCoffees" placeholder="search coffee" class="w-100">
+
+            </form>
+            <hr>
+            <!--Add a Coffee-->
+
+            <form class="w-100">
+                <label for="addRoast"><h4 class="w-100">Add a Coffee</h4></label>
+                <input type="text" placeholder="coffee name" id="addRoast" class="w-100">
+                <select id="add-roast" class="w-100">
+                    <option>light</option>
+                    <option>medium</option>
+                    <option>dark</option>
+                </select>
+
+                <input id="createSubmit" type="submit" class="w-100"/>
+            </form>
+        </div>
+    </section>
+    <div class="col-sm-12 col-md-6">
+        <div id="chalkBoard" class="w-100">
+            <div id="coffees" class="w-100 d-flex flex-column"></div>
+        </div>
+    </div>
+<!--    <div class="col-sm-0 col-md-3  mx-5"></div>-->
+</main>
 
 <script src="main.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
