--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
 </header>
 <main class="row mx-5">
 
-
     <!--User Inputs-->
     <section class="col-sm-12 col-md-6  col-lg-4">
         <div>
             <!--Filter Coffees-->
 
             <form class="w-100">
-                <label for="roast-selection"><h4 class="w-100">Find your favorite</h4></label>
+                <label for="roast-selection"><h4 class="w-100">Find your favorite coffee roast</h4></label>
                 <select id="roast-selection" class="w-100">
                     <option>All</option>
                     <option>light</option>
