coffee-project complete

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class="jumbotron text-center">
+<header class="jumbotron jumbotron-fluid text-center">
 <div id="h1">
     <h1 class="text-center">Coffee Roasters</h1>
 </div>
@@ -59,19 +59,19 @@
 <!--    <div class="col-sm-0 col-md-3  mx-5"></div>-->
 </main>
 <footer id="footer" class="row">
-    <div class="col-4 mt-3">
-        <p class="ml-4">Coffee Roasters <br>
+    <div class="col-4 mt-3 p-0">
+        <p class="pl-4">Coffee Roasters <br>
         1234 Coffee Ave. <br>
         San Antonio, Tx 78250</p>
     </div>
-    <div class="col-4 mt-3">
+    <div class="col-4 mt-3 p-0">
         <ul>
             <li><a href="#">contact</a></li>
             <li><a href="#">about</a></li>
             <li><a href="#">become a vendor</a></li>
         </ul>
     </div>
-    <div class="col-4 d-flex justify-content-center align-items-center">
+    <div class="col-4 d-flex justify-content-center align-items-center p-0">
         <a href=""><i class="fab fa-facebook-square m-3"></i></a>
         <a href=""><i class="fab fa-twitter-square m-3"></i></a>
         <a href=""><i class="fab fa-instagram m-3"></i></a>
