--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     <div class="col-4 mt-3 p-0">
         <ul>
-            <li><a href="#">contact</a></li>
+            <li><a href="mailto:michael.f.satterfield@gmail.com">contact</a></li>
             <li><a href="#">about</a></li>
             <li><a href="#">become a vendor</a></li>
         </ul>
